# transformer-under-the-hood

./: .flake8  .gitignore  .pre-commit-config.yaml  2_attention_explanation.ipynb  3_transformers_experiments.ipynb  README.md  pyproject.toml
transformer_uth/: attention_models.py  consts.py  dataset_generator.py  inference.py  train.py  vectorizer.py
transformer_uth/models/text-to-number-model/: scr-vocab.json  tgt-vocab.json
transformer_uth/original/: inference.py  model.py  raw_inference.py  raw_pytorch_transformer.py  train.py  transformer.py  vectorizer.py
